<resources>
    <string name="app_name">Abs Workout For Women</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="google_baner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="g_inr">ca-app-pub-3940256099942544/1033173712</string>
    <string name="g_native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="Almonds">Almonds</string>
    <string name="Amlajuice">Amla juice</string>
    <string name="Applewatermelonpapayastrawberry">Apple, watermelon, papaya, strawberry</string>
    <string name="BoiledvegetablesSpinachbeanscabbagetomato">Boiled vegetables(Spinach, beans, cabbage, tomato)</string>
    <string name="Brownbread">Brown bread</string>
    <string name="Brownbreadvegsandwich">Brown bread veg sandwich</string>
    <string name="Carrotcucumbercabbagetomatobeansspinachlettuce">Carrot, cucumber, cabbage, tomato, beans, spinach, lettuce</string>
    <string name="Chickenbreasts">Chicken breasts</string>
    <string name="Chickensoup">Chicken soup</string>
    <string name="Cornflakeswithskimmedmilk">Corn flakes with skimmed milk</string>
    <string name="Dairyproducts">DAIRY PRODUCTS</string>
    <string name="Drinks">DRINKS</string>
    <string name="Eggs">Eggs</string>
    <string name="FishTunaorsalmon">Fish-Tuna or salmon</string>
    <string name="Fruits">FRUITS</string>
    <string name="Fruitsalad">Fruit salad</string>
    <string name="Grapes">Grapes</string>
    <string name="Greentea">Green tea</string>
    <string name="LeanBeef">Lean Beef</string>
    <string name="Lemon">Lemon</string>
    <string name="Lemonjuice">Lemon juice</string>
    <string name="Meat">MEAT</string>
    <string name="Mushroom">Mushroom</string>
    <string name="Oatmealcookies">Oatmeal cookies</string>
    <string name="Oats">Oats</string>
    <string name="Oatswithskimmedmilk">Oats with skimmed milk</string>
    <string name="Pasta">Pasta</string>
    <string name="Pineappleorgrapes">Pineapple or grapes</string>
    <string name="Pineappleslices">Pineapple slices</string>
    <string name="Pineappleslicesorgrapes">Pineapple slices or grapes</string>
    <string name="Redrice">Red rice</string>
    <string name="Redricewithleafygreenspinachbroccoli">Red rice with leafy greens(spinach + broccoli)</string>
    <string name="Redricewithmushroom">Red rice with mushroom</string>
    <string name="RedricewithsteamcookedLeanbeef">Red rice with steam cooked Lean beef</string>
    <string name="Redricewithsteamcookedchickenbreasts">Red rice with steam cooked chicken breasts</string>
    <string name="Redricewithsteamcookedtuna">Red rice with steam cooked tuna</string>
    <string name="Ricecerealsandnuts">RICE, CEREALS &amp; NUTS</string>
    <string name="Skimmedmilk">Skimmed milk</string>
    <string name="Snacks">SNACKS</string>
    <string name="Steamcookedleanbeef">Steam cooked lean beef</string>
    <string name="Tomatosoup">Tomato soup</string>
    <string name="Vegetables">VEGETABLES</string>
    <string name="VegetablesaladCarrotcucumbercabbagelettuce">Vegetable salad(Carrot, cucumber, cabbage, lettuce)</string>
    <string name="Vegetablesoup">Vegetable soup</string>
    <string name="Walnuts">Walnuts</string>
    <string name="Wheatforwraps">Wheat for wraps</string>
    <string name="WholewheatchickenwrapChickenbreastslettucetomatoyogurtsauce">Whole wheat chicken wrap(Chicken breasts + lettuce + tomato + yogurt sauce)</string>
    <string name="WholewheatfishwrapSteamcookedtunalettucetomatoyogurtsauce">Whole wheat fish wrap(Steam cooked tuna + lettuce + tomato + yogurt sauce)</string>
    <string name="Wholewheatpastawithbroccoli">Whole wheat pasta with broccoli</string>
    <string name="Wholewheatpastawithsteamcookedsalmon">Whole wheat pasta with steam cooked salmon</string>
    <string name="Wholewheatpastawithveggies">Whole wheat pasta with veggies</string>
    <string name="WholewheatvegetablewrapTomatoonioncucumberspinachcheese">Whole wheat vegetable wrap(Tomato + onion + cucumber + spinach + cheese)</string>
    <string name="abvavgheight">Above Average Height</string>
    <string name="age">Age</string>
    <string name="agerange">Age should be in range 5-100 years</string>
    <string name="alternater_heeltouch">alternate heel touch</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="avgheight">Average Height</string>
    <string name="basic_crunches">basic crunches</string>
    <string name="belowaveraheheight">Below Average Height</string>
    <string name="bench_dips">bench dips</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmikgm">BMI (KG/M²)</string>
    <string name="boat_pose">boat Pose</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="breakfast">Breakfast</string>
    <string name="burpees">burpees</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>
    <string name="completedworkout">You have completed 30 days workouts, To achieve consistency, repeat the exercise from day one.</string>
    <string name="confirm">Confirm!</string>
    <string name="continue_exitdialog">CONTINUE</string>
    <string name="no">No</string>
    <string name="cornflakes">corn flakes</string>
    <string name="criss_cross">criss cross</string>
    <string name="cycles">cycles</string>
    <string name="day">Day</string>
    <string name="day1">Day 1</string>
    <string name="dayleft">days left</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">30-Day workout</string>
    <string name="dinner">Dinner</string>
    <string name="do_you_really_want_to_quit_the_workout">Do you really want to quit the workout?</string>
    <string name="extlongheight">Extra Long Height</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feetrange">Feet should be in range 2-7</string>
    <string name="female">Female</string>
    <string name="fields">Please fill all the fields</string>
    <string name="fivealmonds">5 almonds</string>
    <string name="fiveoatmealcookies">5 oatmeal cookies</string>
    <string name="fivewalnuts">5 Walnuts</string>
    <string name="fourWalnuts">4 Walnuts</string>
    <string name="fourboiledeggwhites">4 boiled egg whites</string>
    <string name="fouroatmealcookies">4 oatmeal cookies</string>
    <string name="fourslicesofpineapple">4 slices of pineapple</string>
    <string name="ft">ft</string>
    <string name="gender">Gender</string>
    <string name="greekyogurt">Greek yogurt</string>
    <string name="greenteapowder">Green tea powder</string>
    <string name="height">Height</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="high_knees">high knees</string>
    <string name="honey">honey</string>
    <string name="in">in</string>
    <string name="inchrange">Inches should be in range 0-12</string>
    <string name="jackknife_situps">jackknife situps</string>
    <string name="jump_squats">jump squats</string>
    <string name="jumping_jacks">jumping jack</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="leafygreenssoupbroccolispinachlettuce">leafy greens soup(broccoli + spinach + lettuce)</string>
    <string name="leg_raise">leg raise</string>
    <string name="leg_up_crunches">leg up crunches</string>
    <string name="lunch">Lunch</string>
    <string name="lunge">lunge</string>
    <string name="male">Male</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="meals_plan">Meals Plan</string>
    <string name="month">mth</string>
    <string name="monthrange">Months should be in range 0-12</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="ok">Ok</string>
    <string name="onecupofgreentea">1 cup of green tea</string>
    <string name="oneglassofamlajuice">1 glass of amla juice</string>
    <string name="oneglassoflemonjuicewithhoney">1 glass of lemon juice with honey</string>
    <string name="onescrambledegg">1 scrambled egg</string>
    <string name="pasta">Pasta</string>
    <string name="plank_with_leg_lift">plank_with_leg_lift</string>
    <string name="plankups">plank Ups</string>
    <string name="plzwatchvideo">Please watch video to unlock workout</string>
    <string name="push_through">push Through</string>
    <string name="pushups">pushups</string>
    <string name="quit">QUIT</string>
    <string name="quit1">Never lose hope! You are just one step away!</string>
    <string name="quit2">Keep trying until it is done!</string>
    <string name="quit3">Believe in yourself to make it happen!</string>
    <string name="quit4">Never give in and keep going!</string>
    <string name="quit5">All you need is the will to succeed! So don’t give up!</string>
    <string name="rateus">Rate us</string>
    <string name="reminder">Reminder</string>
    <string name="repeatworkout">Would you like to repeat this workout?</string>
    <string name="rest_time_str">Rest time</string>
    <string name="restart_progress">Restart progress</string>
    <string name="restartdiloguemessage">Would you like to restart your progress?</string>
    <string name="restday">Rest Day</string>
    <string name="resttime">Resttime</string>
    <string name="reverse_plankkicks">reverse plankkicks</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="save">SAVE</string>
    <string name="search_menu_title">Search</string>
    <string name="seconds">seconds</string>
    <string name="set">Set</string>
    <string name="set_your_preferable_exercise_time">Set Your preferable exercise time</string>
    <string name="seventimes">*7 times</string>
    <string name="share">Share</string>
    <string name="shopping_list">Shopping List</string>
    <string name="sixalmonds">6 almonds</string>
    <string name="sixwalnuts">6 Walnuts</string>
    <string name="snack">Snack</string>
    <string name="sound">Sound</string>
    <string name="squats">squats</string>
    <string name="standarddiet">Standard Diet</string>
    <string name="start">start</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="steamcookedchickenbreasts">steam cooked chicken breasts</string>
    <string name="tab1">Workout</string>
    <string name="threePineappleslicesorgrapes">3 Pineapple slices or grapes</string>
    <string name="threeboiledeggwhites">3 boiled egg whites</string>
    <string name="threeslicesofpineapple">3 slices of pineapple</string>
    <string name="timer_fref_file_name">com.fitnessch19.womenabsworkout</string>
    <string name="tooshortheight">Too Short Height</string>
    <string name="training_plan">Training Plan</string>
    <string name="tweleve">*12 eggs</string>
    <string name="twelevetimes">*12 times</string>
    <string name="weight">Weight</string>
    <string name="year">yr</string>
</resources>