<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/layout_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="12dp">
    <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black" android:layout_gravity="center" android:id="@+id/progressDialogHeadingText" android:layout_width="match_parent" android:layout_height="38dp" android:layout_marginLeft="10dp" android:layout_marginTop="12dp" android:text="@string/confirm" android:fontFamily="@font/roboto_black"/>
    <TextView android:textSize="16sp" android:textColor="#a9a9a9" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:text="@string/restartdiloguemessage" android:fontFamily="@font/robotomedium" android:layout_marginStart="10dp"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/layoutContainer_dialog" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp"/>
    <RelativeLayout android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textSize="14sp" android:textColor="@color/textColor" android:gravity="center" android:layout_gravity="end" android:id="@+id/btnNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_toLeftOf="@+id/btnYes" android:fontFamily="@font/robotomedium" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <Button android:textSize="14sp" android:textColor="@color/colorAccent" android:gravity="center" android:layout_gravity="end" android:id="@+id/btnYes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp" android:text="@string/ok" android:layout_alignParentRight="true" android:fontFamily="@font/robotomedium" android:layout_marginEnd="5dp" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    </RelativeLayout>
</LinearLayout>
